Bind the REPL to the arend server